# Fast-LLM

./: .dockerignore  .gitignore  .gitmodules  .isort.cfg  .markdownlint.yaml  .pre-commit-config.yaml  404.html  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.kda-nightly  Dockerfile.pipelinerl  FAST_LLM_WEIGHT_ACCESS.md  LICENSE  README.md  SECURITY.md  bench_monolithic.py  check_expert_weights.py  check_logits_hidden_layers.ipynb  compare_mlp_traces.py  debug_compare_weights.py  debug_config_compare.py  debug_fsdp_groups.py  debug_fsdp_organization.py  debug_load_simulation.py  debug_moe_routing.py  debug_param_mapping.py  debug_param_names.py  debug_param_order.py  debug_router_comparison.py  debug_single_expert.py  gemma4_decoder_plan.md  generate_diagram.py  index.html  llada_CPT_config.yaml  load_distributed_checkpoint.py  minimal_check.py  mkdocs.yaml  (+24 more)
.claude/commands/: review-coarse.md  review-fine.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-push-docker.yaml  build-documentation.yaml  ci.yaml  deploy_documentation.yaml  docs.yaml  manual-build.yml  run-tests.yaml
_playground_oo/: load_model_fllm.ipynb
about-us/: index.html
apriel2-vllm-plugin/: pyproject.toml
blog/: index.html
community/: index.html
community/feedback/: index.html
configs/: model_config.yaml  model_config_1.yaml  model_config_2.yaml
contributing/contributing/: index.html
contributing/dev-practices/: index.html
contributing/how-to-release/: index.html
contributing/style-guide/: index.html
contributing/testing/: index.html
developer_guide/configuration/: index.html
developer_guide/conversion/: index.html
developer_guide/model/: index.html
developer_guide/parallelism/: index.html
developers/: index.html
developers/contribute/: index.html
developers/contributing/: index.html
developers/dev-practices/: index.html
developers/style-guide/: index.html
diffuLlama/: create_dataset.py  packed_dataset.py
docs/: .markdownlint.yaml  README.md  about-us.md  cost-efficiency.md  help.md  index.md  join-us.md  license.md  quick-start.md  refs.bib
docs/community/: feedback.md
docs/contributing/: contributing.md  how-to-release.md  style-guide.md  testing.md
docs/developer_guide/: configuration.md  conversion.md  model.md  parallelism.md
docs/developers/: contribute.md  contributing.md  dev-practices.md  how-to-release.md  index.md  pr-title-guidelines.md  style-guide.md
docs/examples/: continue-training-llama-8b.md  data-preparation.md
docs/in-action/: kubernetes.md  slurm.md
docs/recipes/: continue-training-llama-8b.md  continue-training-qwen-7b.md  continue-training.md  data-configuration.md  data-preparation.md  generate.md  instruction-finetuning.md  reinforcement-learning.md  supervised-finetuning.md  train-llama-8b.md  train-qwen-7b.md  train.md  upcycle-llama-3b-to-moe.md
docs/reference/: index.md
docs/success-stories/: starcoder-2.md
docs/tutorial/: convert_to_huggingface.md  getting_started.md  index.md  launch_training.md  prepare_mistral.md  prepare_training.md
docs/user_guide/: configuration.md  evaluators.md  multi-stage.md  parallelism.md
examples/: example_config.yaml  fast-llm-pvc.yaml  fast-llm.pytorchjob.yaml  fast-llm.sbat  llada_cpt_config.yaml  llama-70b-benchmark.yaml  llama-70b-benchmarking.yaml  mistral-4-node-benchmark.yaml  mistral.yaml  qwen_evaluate.yaml  qwen_gspo_0.5b.yaml  qwen_gspo_7b.yaml  smol_evaluate.yaml  stardoc_config.yaml  train_mistral.sh  train_stardoc.sh  train_stardoc_akshay.sh
examples/batch_size_scaling/: ANALYSIS.md  README.md  arm_base.yaml  prepare.yaml  warmup.yaml
examples/evaluate_precision/: qwen.yaml  qwen_7b.yaml  qwen_multi_seq.yaml  qwen_multi_seq_layerwise.yaml  qwen_multi_seq_layerwise_256.yaml  sample_text.txt  smol.yaml  smol_gspo.yaml
fast_llm/: cli.py  config.py  distributed.py  logging.py  profile.py  run.py  tensor.py  utils.py
fast_llm/batch/: config.py  language_model.py
fast_llm/core/: distributed.py  kernels.py  ops.py
fast_llm/csrc/: Makefile  data.cpp  embedding.cpp
fast_llm/data/: auto.py  blended.py  config.py  data.py  data_loader.py  dataset.py  fim.py  gpt.py  image_processor.py  iterator.py  mmap.py  processor.py  sampler.py  stardoc.py  tokenizer.py
fast_llm/diffullama/: create_dataset.py  create_dataset_parallel.py  model_llama.py  packed_dataset.py  (+2 more)
fast_llm_external_models/: make_hybrid_checkpoint_with_importance_15b_mil.py
help/: index.html
join-us/: index.html
license/: index.html
overrides/: index.html  main.html
quick-start/: index.html
reference/: index.html
search/: search_index.json
tests/: common.py  compare_tensor_logs.py  conftest.py  test_attention.py  test_checkpoint.py  test_config.py  test_dataset.py  test_distillation_loss.py  test_functional.py  test_generate.py  test_gpt_generate.py  test_gpt_generate_and_forward.py  test_gpt_loss.py  test_hybrid.py  test_loss_mask.py  test_losses.py  test_masking.py  test_match_megatron.py  test_mb.py  test_mb_seq_first.py  test_memmap_dataset.py  test_mlm_loss.py  test_mlp.py  test_modular_config.py  test_moe_metrics.py  test_moe_rouring.py  test_ms.py  test_mtp.py  test_multi_stage.py  test_rkl_loss.py  test_routing_metrics.py  test_runner.py  test_seq_first.py  test_simple.py  test_ssm_varlen.py  test_ssms.py  test_transformer.py  test_triton_kernels.py  test_trust_remote_code.py  test_varlen.py
tools/: README_discover_datasets.md  concatenate_dataset.py  detokenize_fastllm_memmap.py  discover_datasets.py  evaluate_precision.py  evaluate_precision_cross_engine.py  evaluate_precision_deepspeed.py  evaluate_precision_vllm.py  gemma4_decoder_backward_parity.py  gemma4_forward_parity.py  gemma4_moe_real_dims_smoke.py  generate_config_docs.py  generate_config_yaml_for_sharded_dst.py  inspect_rotary_compile.py  moe_add_experts.py  prepare_dataset.py  push_model.py  supernet_beam_search.py  transformer_add_mtp_heads.py
tutorial/: index.html
wandb/: latest-run
(+837 files in other folders)
