[metadata]
name = fast_llm

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.12
install_requires =
    requests>=2.32.3
    PyYAML>=6.0.1
    pybind11>=2.5.0
    packaging>=24.1

[options.extras_require]
# Required to use the main functionality of Fast-LLM
# To install on cpu environment (ex. for IDE support):
#   FLASH_ATTENTION_SKIP_CUDA_BUILD=TRUE FLASH_ATTENTION_FORCE_BUILD=TRUE pip install -e ".[CORE]" --no-build-isolation
CORE =
    # Available through the nvidia base image
    torch>=2.5.0
    # Numpy major needs to match torch
    numpy>=1.24.4,<2.0.0
    # Used for checkpoints
    safetensors>=0.4.4
    # Update the base image (version fixed to ensure there is a wheel for the base image), may need --no-build-isolation
    flash-attn==2.7.2.post1
    mamba_ssm[causal-conv1d]==2.2.4


# Required for some optional features and tools.
OPTIONAL =
    # Huggingface tools
    transformers>=4.44.2
    hf-transfer>=0.1.8
    datasets>=3.1.0
    huggingface-hub>=0.28.1
    # Weights and biases
    wandb>=0.17.7
    # Hydra
    hydra-core>=1.3.2
    omegaconf>=2.3.0
    # Miscellaneous
    requests>=2.32.3
    tqdm>=4.66.3

DEV =
    # Pre-commit git hook
    pre-commit>=4.0.1
    # Required for testing
    pytest>=8.3.2
    pytest-depends>=1.0.1
    pytest-xdist>=3.6.1
    # Somehow needed for Megatron to work with base image 24.11
    setuptools>=75.6.0

# Required for building the documentation
DOCS =
    mkdocs
    mkdocs-material
    mkdocs-material[imaging]
    mkdocs-section-index
    mkdocstrings[python]
    mkdocs-git-committers-plugin-2
    mkdocs-git-revision-date-localized-plugin
    pypandoc_binary
    mkdocs-bibtex
    cairosvg==2.7.0

[options.entry_points]
console_scripts =
    fast-llm = fast_llm.tools.cli:fast_llm
