[metadata]
name = fast_llm

[options]
packages = find_namespace:
include_package_data = True
python_requires = >=3.12
install_requires =
    requests>=2.32.4
    PyYAML>=6.0.2
    pybind11>=2.13.6
    packaging>=25.0

[options.extras_require]
# Required to use the main functionality of Fast-LLM
# To install on cpu environment (ex. for IDE support):
#   FLASH_ATTENTION_SKIP_CUDA_BUILD=TRUE FLASH_ATTENTION_FORCE_BUILD=TRUE pip install -e ".[CORE]" --no-build-isolation
CORE =
    # Available through the nvidia base image
    torch>=2.7.0
    # Numpy major needs to match torch
    numpy>=1.26.4,<2.0.0
    # Used for checkpoints
    safetensors>=0.5.3
    # Update the base image (version fixed to ensure there is a wheel for the base image), may need --no-build-isolation
    flash-attn==2.7.3
    # Dropless MLP is broken with triton 3.2.0, 3.3.0 and 3.3.1. TODO: Remove once a working triton version is released.
    triton==3.1.0


# Small packages required for some optional features and tools.
OPTIONAL =
    # Weights and biases
    wandb>=0.20.1
    # Hydra
    hydra-core>=1.3.2
    omegaconf>=2.3.0
    # Miscellaneous
    tqdm>=4.67.1

# Huggingface tools
HUGGINGFACE =
    transformers>=4.52.4
    hf-transfer>=0.1.9
    datasets>=3.6.0
    huggingface-hub>=0.32.6

# Required to run SSMs
# To install on cpu environment (ex. for IDE support):
#   MAMBA_FORCE_BUILD=TRUE CAUSAL_CONV1D_FORCE_BUILD=TRUE CAUSAL_CONV1D_SKIP_CUDA_BUILD=TRUE pip install -e ".[CORE,SSM]" --no-build-isolation
SSM =
    mamba_ssm[causal-conv1d]==2.2.4

DEV =
    # Pre-commit git hook
    pre-commit>=4.2.0
    # Required for testing
    pytest>=8.4.0
    pytest-xdist>=3.7.0
    # Somehow needed for Megatron to work with base image 24.11
    setuptools>=80.9.0
    # Dependency manager needs colorama to show colors.
    colorama>=0.4.6

# Required for building the documentation
DOCS =
    mkdocs
    mkdocs-material
    mkdocs-material[imaging]
    mkdocs-section-index
    mkdocstrings[python]
    mkdocs-git-committers-plugin-2
    mkdocs-git-revision-date-localized-plugin
    pypandoc_binary
    mkdocs-bibtex
    cairosvg==2.7.0

[options.entry_points]
console_scripts =
    fast-llm = fast_llm.cli:fast_llm_main
